Correctly align Partner heading

--- a/shared/components/EventSponsors/index.scss
+++ b/shared/components/EventSponsors/index.scss
@@ -22,8 +22,4 @@
       height: 80px;
     }
   }
-
-  h3 {
-    margin-top: 0;
-  }
 }
